--- a/Groupe 2/Groupe 2/rendu.ipynb
+++ b/Groupe 2/Groupe 2/rendu.ipynb
@@ -13,8 +13,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On va créer des datasets pour chaque candidats :"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -24,406 +31,6 @@
       "c:\\Users\\hedil\\anaconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3444: DtypeWarning: Columns (0,6) have mixed types.Specify dtype option on import or set low_memory=False.\n",
       "  exec(code_obj, self.user_global_ns, self.user_ns)\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Code du département</th>\n",
-       "      <th>Libellé du département</th>\n",
-       "      <th>Code de la circonscription</th>\n",
-       "      <th>Libellé de la circonscription</th>\n",
-       "      <th>Code de la commune</th>\n",
-       "      <th>Libellé de la commune</th>\n",
-       "      <th>Code du b.vote</th>\n",
-       "      <th>Inscrits</th>\n",
-       "      <th>Abstentions</th>\n",
-       "      <th>% Abs/Ins</th>\n",
-       "      <th>...</th>\n",
-       "      <th>Voix.11</th>\n",
-       "      <th>% Voix/Ins.11</th>\n",
-       "      <th>% Voix/Exp.11</th>\n",
-       "      <th>N°Panneau.12</th>\n",
-       "      <th>Sexe.12</th>\n",
-       "      <th>Nom.12</th>\n",
-       "      <th>Prénom.12</th>\n",
-       "      <th>Voix.12</th>\n",
-       "      <th>% Voix/Ins.12</th>\n",
-       "      <th>% Voix/Exp.12</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Ain</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5ème circonscription</td>\n",
-       "      <td>2</td>\n",
-       "      <td>L'Abergement-de-Varey</td>\n",
-       "      <td>0001</td>\n",
-       "      <td>213</td>\n",
-       "      <td>38</td>\n",
-       "      <td>17,84</td>\n",
-       "      <td>...</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1,41</td>\n",
-       "      <td>1,75</td>\n",
-       "      <td>12</td>\n",
-       "      <td>M</td>\n",
-       "      <td>DUPONT-AIGNAN</td>\n",
-       "      <td>Nicolas</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0,00</td>\n",
-       "      <td>0,00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Ain</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5ème circonscription</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Ambérieu-en-Bugey</td>\n",
-       "      <td>0001</td>\n",
-       "      <td>1129</td>\n",
-       "      <td>266</td>\n",
-       "      <td>23,56</td>\n",
-       "      <td>...</td>\n",
-       "      <td>8</td>\n",
-       "      <td>0,71</td>\n",
-       "      <td>0,95</td>\n",
-       "      <td>12</td>\n",
-       "      <td>M</td>\n",
-       "      <td>DUPONT-AIGNAN</td>\n",
-       "      <td>Nicolas</td>\n",
-       "      <td>13</td>\n",
-       "      <td>1,15</td>\n",
-       "      <td>1,55</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Ain</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5ème circonscription</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Ambérieu-en-Bugey</td>\n",
-       "      <td>0002</td>\n",
-       "      <td>1128</td>\n",
-       "      <td>265</td>\n",
-       "      <td>23,49</td>\n",
-       "      <td>...</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0,35</td>\n",
-       "      <td>0,48</td>\n",
-       "      <td>12</td>\n",
-       "      <td>M</td>\n",
-       "      <td>DUPONT-AIGNAN</td>\n",
-       "      <td>Nicolas</td>\n",
-       "      <td>20</td>\n",
-       "      <td>1,77</td>\n",
-       "      <td>2,38</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Ain</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5ème circonscription</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Ambérieu-en-Bugey</td>\n",
-       "      <td>0003</td>\n",
-       "      <td>1213</td>\n",
-       "      <td>246</td>\n",
-       "      <td>20,28</td>\n",
-       "      <td>...</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0,25</td>\n",
-       "      <td>0,32</td>\n",
-       "      <td>12</td>\n",
-       "      <td>M</td>\n",
-       "      <td>DUPONT-AIGNAN</td>\n",
-       "      <td>Nicolas</td>\n",
-       "      <td>19</td>\n",
-       "      <td>1,57</td>\n",
-       "      <td>2,00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Ain</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5ème circonscription</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Ambérieu-en-Bugey</td>\n",
-       "      <td>0004</td>\n",
-       "      <td>933</td>\n",
-       "      <td>224</td>\n",
-       "      <td>24,01</td>\n",
-       "      <td>...</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0,43</td>\n",
-       "      <td>0,57</td>\n",
-       "      <td>12</td>\n",
-       "      <td>M</td>\n",
-       "      <td>DUPONT-AIGNAN</td>\n",
-       "      <td>Nicolas</td>\n",
-       "      <td>26</td>\n",
-       "      <td>2,79</td>\n",
-       "      <td>3,73</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>69676</th>\n",
-       "      <td>ZZ</td>\n",
-       "      <td>Français établis hors de France</td>\n",
-       "      <td>6</td>\n",
-       "      <td>6ème circonscription</td>\n",
-       "      <td>229</td>\n",
-       "      <td>Zurich</td>\n",
-       "      <td>1</td>\n",
-       "      <td>24868</td>\n",
-       "      <td>14101</td>\n",
-       "      <td>56,70</td>\n",
-       "      <td>...</td>\n",
-       "      <td>47</td>\n",
-       "      <td>0,19</td>\n",
-       "      <td>0,44</td>\n",
-       "      <td>12</td>\n",
-       "      <td>M</td>\n",
-       "      <td>DUPONT-AIGNAN</td>\n",
-       "      <td>Nicolas</td>\n",
-       "      <td>189</td>\n",
-       "      <td>0,76</td>\n",
-       "      <td>1,77</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>69677</th>\n",
-       "      <td>ZZ</td>\n",
-       "      <td>Français établis hors de France</td>\n",
-       "      <td>11</td>\n",
-       "      <td>11ème circonscription</td>\n",
-       "      <td>231</td>\n",
-       "      <td>Taipei</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1709</td>\n",
-       "      <td>942</td>\n",
-       "      <td>55,12</td>\n",
-       "      <td>...</td>\n",
-       "      <td>10</td>\n",
-       "      <td>0,59</td>\n",
-       "      <td>1,32</td>\n",
-       "      <td>12</td>\n",
-       "      <td>M</td>\n",
-       "      <td>DUPONT-AIGNAN</td>\n",
-       "      <td>Nicolas</td>\n",
-       "      <td>10</td>\n",
-       "      <td>0,59</td>\n",
-       "      <td>1,32</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>69678</th>\n",
-       "      <td>ZZ</td>\n",
-       "      <td>Français établis hors de France</td>\n",
-       "      <td>11</td>\n",
-       "      <td>11ème circonscription</td>\n",
-       "      <td>233</td>\n",
-       "      <td>Nour-Soultan</td>\n",
-       "      <td>1</td>\n",
-       "      <td>117</td>\n",
-       "      <td>64</td>\n",
-       "      <td>54,70</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0,00</td>\n",
-       "      <td>0,00</td>\n",
-       "      <td>12</td>\n",
-       "      <td>M</td>\n",
-       "      <td>DUPONT-AIGNAN</td>\n",
-       "      <td>Nicolas</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0,85</td>\n",
-       "      <td>1,96</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>69679</th>\n",
-       "      <td>ZZ</td>\n",
-       "      <td>Français établis hors de France</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2ème circonscription</td>\n",
-       "      <td>234</td>\n",
-       "      <td>Monterrey</td>\n",
-       "      <td>1</td>\n",
-       "      <td>713</td>\n",
-       "      <td>553</td>\n",
-       "      <td>77,56</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0,14</td>\n",
-       "      <td>0,63</td>\n",
-       "      <td>12</td>\n",
-       "      <td>M</td>\n",
-       "      <td>DUPONT-AIGNAN</td>\n",
-       "      <td>Nicolas</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0,14</td>\n",
-       "      <td>0,63</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>69680</th>\n",
-       "      <td>ZZ</td>\n",
-       "      <td>Français établis hors de France</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2ème circonscription</td>\n",
-       "      <td>235</td>\n",
-       "      <td>Bahamas (Nassau)</td>\n",
-       "      <td>1</td>\n",
-       "      <td>136</td>\n",
-       "      <td>78</td>\n",
-       "      <td>57,35</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0,00</td>\n",
-       "      <td>0,00</td>\n",
-       "      <td>12</td>\n",
-       "      <td>M</td>\n",
-       "      <td>DUPONT-AIGNAN</td>\n",
-       "      <td>Nicolas</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0,74</td>\n",
-       "      <td>1,82</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>69681 rows × 105 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      Code du département           Libellé du département  \\\n",
-       "0                       1                              Ain   \n",
-       "1                       1                              Ain   \n",
-       "2                       1                              Ain   \n",
-       "3                       1                              Ain   \n",
-       "4                       1                              Ain   \n",
-       "...                   ...                              ...   \n",
-       "69676                  ZZ  Français établis hors de France   \n",
-       "69677                  ZZ  Français établis hors de France   \n",
-       "69678                  ZZ  Français établis hors de France   \n",
-       "69679                  ZZ  Français établis hors de France   \n",
-       "69680                  ZZ  Français établis hors de France   \n",
-       "\n",
-       "       Code de la circonscription Libellé de la circonscription  \\\n",
-       "0                               5          5ème circonscription   \n",
-       "1                               5          5ème circonscription   \n",
-       "2                               5          5ème circonscription   \n",
-       "3                               5          5ème circonscription   \n",
-       "4                               5          5ème circonscription   \n",
-       "...                           ...                           ...   \n",
-       "69676                           6          6ème circonscription   \n",
-       "69677                          11         11ème circonscription   \n",
-       "69678                          11         11ème circonscription   \n",
-       "69679                           2          2ème circonscription   \n",
-       "69680                           2          2ème circonscription   \n",
-       "\n",
-       "       Code de la commune  Libellé de la commune Code du b.vote  Inscrits  \\\n",
-       "0                       2  L'Abergement-de-Varey           0001       213   \n",
-       "1                       4      Ambérieu-en-Bugey           0001      1129   \n",
-       "2                       4      Ambérieu-en-Bugey           0002      1128   \n",
-       "3                       4      Ambérieu-en-Bugey           0003      1213   \n",
-       "4                       4      Ambérieu-en-Bugey           0004       933   \n",
-       "...                   ...                    ...            ...       ...   \n",
-       "69676                 229                 Zurich              1     24868   \n",
-       "69677                 231                 Taipei              1      1709   \n",
-       "69678                 233           Nour-Soultan              1       117   \n",
-       "69679                 234              Monterrey              1       713   \n",
-       "69680                 235       Bahamas (Nassau)              1       136   \n",
-       "\n",
-       "       Abstentions % Abs/Ins  ...  Voix.11 % Voix/Ins.11  % Voix/Exp.11  \\\n",
-       "0               38     17,84  ...        3          1,41           1,75   \n",
-       "1              266     23,56  ...        8          0,71           0,95   \n",
-       "2              265     23,49  ...        4          0,35           0,48   \n",
-       "3              246     20,28  ...        3          0,25           0,32   \n",
-       "4              224     24,01  ...        4          0,43           0,57   \n",
-       "...            ...       ...  ...      ...           ...            ...   \n",
-       "69676        14101     56,70  ...       47          0,19           0,44   \n",
-       "69677          942     55,12  ...       10          0,59           1,32   \n",
-       "69678           64     54,70  ...        0          0,00           0,00   \n",
-       "69679          553     77,56  ...        1          0,14           0,63   \n",
-       "69680           78     57,35  ...        0          0,00           0,00   \n",
-       "\n",
-       "      N°Panneau.12 Sexe.12         Nom.12 Prénom.12 Voix.12  % Voix/Ins.12  \\\n",
-       "0               12       M  DUPONT-AIGNAN   Nicolas       0           0,00   \n",
-       "1               12       M  DUPONT-AIGNAN   Nicolas      13           1,15   \n",
-       "2               12       M  DUPONT-AIGNAN   Nicolas      20           1,77   \n",
-       "3               12       M  DUPONT-AIGNAN   Nicolas      19           1,57   \n",
-       "4               12       M  DUPONT-AIGNAN   Nicolas      26           2,79   \n",
-       "...            ...     ...            ...       ...     ...            ...   \n",
-       "69676           12       M  DUPONT-AIGNAN   Nicolas     189           0,76   \n",
-       "69677           12       M  DUPONT-AIGNAN   Nicolas      10           0,59   \n",
-       "69678           12       M  DUPONT-AIGNAN   Nicolas       1           0,85   \n",
-       "69679           12       M  DUPONT-AIGNAN   Nicolas       1           0,14   \n",
-       "69680           12       M  DUPONT-AIGNAN   Nicolas       1           0,74   \n",
-       "\n",
-       "      % Voix/Exp.12  \n",
-       "0              0,00  \n",
-       "1              1,55  \n",
-       "2              2,38  \n",
-       "3              2,00  \n",
-       "4              3,73  \n",
-       "...             ...  \n",
-       "69676          1,77  \n",
-       "69677          1,32  \n",
-       "69678          1,96  \n",
-       "69679          0,63  \n",
-       "69680          1,82  \n",
-       "\n",
-       "[69681 rows x 105 columns]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -440,9 +47,7 @@
     "df_JY = df[['N°Panneau.9', 'Sexe.9', 'Nom.9', 'Prénom.9', 'Voix.9', '% Voix/Ins.9', '% Voix/Exp.9']]\n",
     "df_PV = df[['N°Panneau.10', 'Sexe.10', 'Nom.10', 'Prénom.10', 'Voix.10', '% Voix/Ins.10', '% Voix/Exp.10']]\n",
     "df_PP = df[['N°Panneau.11', 'Sexe.11', 'Nom.11', 'Prénom.11', 'Voix.11', '% Voix/Ins.11', '% Voix/Exp.11']]\n",
-    "df_DAN = df[['N°Panneau.12', 'Sexe.12', 'Nom.12', 'Prénom.12', 'Voix.12', '% Voix/Ins.12', '% Voix/Exp.12']]\n",
-    "\n",
-    "df"
+    "df_DAN = df[['N°Panneau.12', 'Sexe.12', 'Nom.12', 'Prénom.12', 'Voix.12', '% Voix/Ins.12', '% Voix/Exp.12']]"
    ]
   },
   {
@@ -467,6 +72,13 @@
     "\n",
     "print(\"Nombre de variables dans un dataset candidat : \", df.shape[1])\n",
     "print(\"Nombre d'observations dans un dataset candidat : \", df.shape[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On calcule le nombre d'inscrits, de participants et de personnes s'étant abstenues :"
    ]
   },
   {
@@ -518,6 +130,15 @@
     "\n",
     "print(\"Absentention : \", rappAbs, \"%\")\n",
     "print(\"Participation : \", rappVot, \"%\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Une abstention de 26.3%, ce qui est assez remarquable.\n",
+    "Plus que n'importe quel candidat.\n",
+    "Traçons les diagrammes camemberts des résultats avec puis sans abstention"
    ]
   },
   {
@@ -598,6 +219,14 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On peut voir que l'abstention a joué un rôle très important dans ce 1er tour.\n",
+    "En effet, n'importe quel candidat pourrait arriver 1er si il récupérait les voix de l'abstention"
+   ]
   }
  ],
  "metadata": {
