--- a/Groupe 2/Groupe 2/rendu.ipynb
+++ b/Groupe 2/Groupe 2/rendu.ipynb
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [
     {
@@ -269,86 +269,103 @@
        "      <th>Voix.6</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Libellé de la commune</th>\n",
+       "      <th>Libellé du département</th>\n",
        "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Aast</th>\n",
-       "      <td>8</td>\n",
+       "      <th>Ain</th>\n",
+       "      <td>27487</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Abainville</th>\n",
-       "      <td>17</td>\n",
+       "      <th>Aisne</th>\n",
+       "      <td>18266</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Abancourt</th>\n",
-       "      <td>45</td>\n",
+       "      <th>Allier</th>\n",
+       "      <td>12361</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Abaucourt</th>\n",
-       "      <td>15</td>\n",
+       "      <th>Alpes-Maritimes</th>\n",
+       "      <td>78208</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Abaucourt-Hautecourt</th>\n",
-       "      <td>5</td>\n",
+       "      <th>Alpes-de-Haute-Provence</th>\n",
+       "      <td>7926</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Éloise</th>\n",
-       "      <td>36</td>\n",
+       "      <th>Vienne</th>\n",
+       "      <td>11939</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Étercy</th>\n",
-       "      <td>45</td>\n",
+       "      <th>Vosges</th>\n",
+       "      <td>13184</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Étrembières</th>\n",
-       "      <td>56</td>\n",
+       "      <th>Wallis et Futuna</th>\n",
+       "      <td>118</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Évian-les-Bains</th>\n",
-       "      <td>375</td>\n",
+       "      <th>Yonne</th>\n",
+       "      <td>12941</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Ô-de-Selle</th>\n",
-       "      <td>43</td>\n",
+       "      <th>Yvelines</th>\n",
+       "      <td>64407</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>32987 rows × 1 columns</p>\n",
+       "<p>107 rows × 1 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                       Voix.6\n",
-       "Libellé de la commune        \n",
-       "Aast                        8\n",
-       "Abainville                 17\n",
-       "Abancourt                  45\n",
-       "Abaucourt                  15\n",
-       "Abaucourt-Hautecourt        5\n",
-       "...                       ...\n",
-       "Éloise                     36\n",
-       "Étercy                     45\n",
-       "Étrembières                56\n",
-       "Évian-les-Bains           375\n",
-       "Ô-de-Selle                 43\n",
+       "                         Voix.6\n",
+       "Libellé du département         \n",
+       "Ain                       27487\n",
+       "Aisne                     18266\n",
+       "Allier                    12361\n",
+       "Alpes-Maritimes           78208\n",
+       "Alpes-de-Haute-Provence    7926\n",
+       "...                         ...\n",
+       "Vienne                    11939\n",
+       "Vosges                    13184\n",
+       "Wallis et Futuna            118\n",
+       "Yonne                     12941\n",
+       "Yvelines                  64407\n",
        "\n",
-       "[32987 rows x 1 columns]"
+       "[107 rows x 1 columns]"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 190,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dftemp = pd.pivot_table(data = df, index = 'Libellé de la commune', values = 'Voix.6', aggfunc = 'sum')\n",
-    "dftemp"
+    "df_ZE_dep = pd.pivot_table(data = df, index = 'Libellé du département', values = 'Voix.6', aggfunc = 'sum')\n",
+    "df_ZE_dep"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 192,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Région avec le meilleur score pour Zemmour : 108617\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Région avec le meilleur score pour Zemmour :', np.max(df_ZE_dep['Voix.6']))"
    ]
   }
  ],
