--- a/Groupe 2/Groupe 2/rendu.ipynb
+++ b/Groupe 2/Groupe 2/rendu.ipynb
@@ -678,13 +678,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pr = [pr_AN, pr_DAN, pr_HA, pr_JY, pr_LJ, pr_LPM, pr_ME, pr_MJL, pr_PP, pr_PV, pr_ZE, pr_RF]\n",
+    "data = {[pr_AN, pr_DAN, pr_HA, pr_JY, pr_LJ, pr_LPM, pr_ME, pr_MJL, pr_PP, pr_PV, pr_ZE, pr_RF], \n",
+    "        }\n",
     "noms = [df_AN[\"Nom.AN\"][1], df_DAN[\"Nom.DAN\"][1], df_HA[\"Nom.HA\"][1], df_JY[\"Nom.JY\"][1], df_LJ[\"Nom.LJ\"][1], df_LPM[\"Nom.LPM\"][1], df_ME[\"Nom.ME\"][1], df_MJL[\"Nom.MJL\"][1],\n",
     "df_PP[\"Nom.PP\"][1], df_PV[\"Nom.PV\"][1], df_ZE[\"Nom.ZE\"][1], df_RF[\"Nom.RF\"][1]]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.548646</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2.018656</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1.716076</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4.531417</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3.065906</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>22.641951</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>27.232874</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>21.469165</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>0.748542</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>4.673797</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>6.918067</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>2.233684</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            0\n",
+       "0    0.548646\n",
+       "1    2.018656\n",
+       "2    1.716076\n",
+       "3    4.531417\n",
+       "4    3.065906\n",
+       "5   22.641951\n",
+       "6   27.232874\n",
+       "7   21.469165\n",
+       "8    0.748542\n",
+       "9    4.673797\n",
+       "10   6.918067\n",
+       "11   2.233684"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "frame = pd.DataFrame(data)\n",
+    "frame"
    ]
   },
   {
