--- a/Groupe 2/Groupe 2/rendu.ipynb
+++ b/Groupe 2/Groupe 2/rendu.ipynb
@@ -36,18 +36,18 @@
    "source": [
     "df = pd.read_csv(\"resultats-par-niveau-burvot-t1-france-entiere.txt\", header = 0, sep=';', encoding = 'latin-1')\n",
     "df0 = df[['Code du département', 'Libellé du département', 'Code de la circonscription', 'Libellé de la circonscription', 'Code de la commune', 'Libellé de la commune', 'Code du b.vote', 'Inscrits', 'Abstentions', '% Abs/Ins', 'Votants', '% Vot/Ins', 'Blancs', '% Blancs/Ins', '% Blancs/Vot', 'Nuls', '% Nuls/Ins', '% Nuls/Vot', 'Exprimés', '% Exp/Ins', '% Exp/Vot']]\n",
-    "df_AN = df[['N°Panneau.1', 'Sexe.1', 'Nom.1', 'Prénom.1', 'Voix.1', '% Voix/Ins.1', '% Voix/Exp.1']]\n",
-    "df_RF = df[['N°Panneau.2', 'Sexe.2', 'Nom.2', 'Prénom.2', 'Voix.2', '% Voix/Ins.2', '% Voix/Exp.2']]\n",
-    "df_ME = df[['N°Panneau.3', 'Sexe.3', 'Nom.3', 'Prénom.3', 'Voix.3', '% Voix/Ins.3', '% Voix/Exp.3']]\n",
-    "df_LJ = df[['N°Panneau.4', 'Sexe.4', 'Nom.4', 'Prénom.4', 'Voix.4', '% Voix/Ins.4', '% Voix/Exp.4']]\n",
-    "df_LPM = df[['N°Panneau.5', 'Sexe.5', 'Nom.5', 'Prénom.5', 'Voix.5', '% Voix/Ins.5', '% Voix/Exp.5']]\n",
-    "df_ZE = df[['N°Panneau.6', 'Sexe.6', 'Nom.6', 'Prénom.6', 'Voix.6', '% Voix/Ins.6', '% Voix/Exp.6']]\n",
-    "df_MJL = df[['N°Panneau.7', 'Sexe.7', 'Nom.7', 'Prénom.7', 'Voix.7', '% Voix/Ins.7', '% Voix/Exp.7']]\n",
-    "df_HA = df[['N°Panneau.8', 'Sexe.8', 'Nom.8', 'Prénom.8', 'Voix.8', '% Voix/Ins.8', '% Voix/Exp.8']]\n",
-    "df_JY = df[['N°Panneau.9', 'Sexe.9', 'Nom.9', 'Prénom.9', 'Voix.9', '% Voix/Ins.9', '% Voix/Exp.9']]\n",
-    "df_PV = df[['N°Panneau.10', 'Sexe.10', 'Nom.10', 'Prénom.10', 'Voix.10', '% Voix/Ins.10', '% Voix/Exp.10']]\n",
-    "df_PP = df[['N°Panneau.11', 'Sexe.11', 'Nom.11', 'Prénom.11', 'Voix.11', '% Voix/Ins.11', '% Voix/Exp.11']]\n",
-    "df_DAN = df[['N°Panneau.12', 'Sexe.12', 'Nom.12', 'Prénom.12', 'Voix.12', '% Voix/Ins.12', '% Voix/Exp.12']]"
+    "df_AN = df[['N°Panneau.AN', 'Sexe.AN', 'Nom.AN', 'Prénom.AN', 'Voix.AN', '% Voix/Ins.AN', '% Voix/Exp.AN']]\n",
+    "df_RF = df[['N°Panneau.RF', 'Sexe.RF', 'Nom.RF', 'Prénom.RF', 'Voix.RF', '% Voix/Ins.RF', '% Voix/Exp.RF']]\n",
+    "df_ME = df[['N°Panneau.ME', 'Sexe.ME', 'Nom.ME', 'Prénom.ME', 'Voix.ME', '% Voix/Ins.ME', '% Voix/Exp.ME']]\n",
+    "df_LJ = df[['N°Panneau.LJ', 'Sexe.LJ', 'Nom.LJ', 'Prénom.LJ', 'Voix.LJ', '% Voix/Ins.LJ', '% Voix/Exp.LJ']]\n",
+    "df_LPM = df[['N°Panneau.LPM', 'Sexe.LPM', 'Nom.LPM', 'Prénom.LPM', 'Voix.LPM', '% Voix/Ins.LPM', '% Voix/Exp.LPM']]\n",
+    "df_ZE = df[['N°Panneau.ZE', 'Sexe.ZE', 'Nom.ZE', 'Prénom.ZE', 'Voix.ZE', '% Voix/Ins.ZE', '% Voix/Exp.ZE']]\n",
+    "df_MJL = df[['N°Panneau.MJL', 'Sexe.MJL', 'Nom.MJL', 'Prénom.MJL', 'Voix.MJL', '% Voix/Ins.MJL', '% Voix/Exp.MJL']]\n",
+    "df_HA = df[['N°Panneau.HA', 'Sexe.HA', 'Nom.HA', 'Prénom.HA', 'Voix.HA', '% Voix/Ins.HA', '% Voix/Exp.HA']]\n",
+    "df_JY = df[['N°Panneau.JY', 'Sexe.JY', 'Nom.JY', 'Prénom.JY', 'Voix.JY', '% Voix/Ins.JY', '% Voix/Exp.JY']]\n",
+    "df_PV = df[['N°Panneau.PV', 'Sexe.PV', 'Nom.PV', 'Prénom.PV', 'Voix.PV', '% Voix/Ins.PV', '% Voix/Exp.PV']]\n",
+    "df_PP = df[['N°Panneau.PP', 'Sexe.PP', 'Nom.PP', 'Prénom.PP', 'Voix.PP', '% Voix/Ins.PP', '% Voix/Exp.PP']]\n",
+    "df_DAN = df[['N°Panneau.DAN', 'Sexe.DAN', 'Nom.DAN', 'Prénom.DAN', 'Voix.DAN', '% Voix/Ins.DAN', '% Voix/Exp.DAN']]"
    ]
   },
   {
@@ -148,7 +148,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Une abstention de 26.3%, ce qui est assez remarquable.\n",
+    "Une abstention de 26.ME%, ce qui est assez remarquable.\n",
     "Plus que n'importe quel candidat.\n",
     "Traçons les diagrammes camemberts des résultats sans puis avec abstentions et votes blancs:"
    ]
@@ -159,13 +159,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "voixCandidat = np.array([np.sum(df['Voix.1']), np.sum(df['Voix.2']), np.sum(df['Voix.3']), np.sum(df['Voix.4']), np.sum(df['Voix.5']), \n",
-    "np.sum(df['Voix.6']), np.sum(df['Voix.7']), np.sum(df['Voix.8']), np.sum(df['Voix.9']), np.sum(df['Voix.10']), np.sum(df['Voix.11']), \n",
-    "np.sum(df['Voix.12'])])\n",
+    "voixCandidat = np.array([np.sum(df['Voix.1']), np.sum(df['Voix.2']), np.sum(df['Voix.3']), np.sum(df['Voix.LJ']), np.sum(df['Voix.5']), \n",
+    "np.sum(df['Voix.ZE']), np.sum(df['Voix.MJL']), np.sum(df['Voix.HA']), np.sum(df['Voix.JY']), np.sum(df['Voix.PV']), np.sum(df['Voix.PP']), \n",
+    "np.sum(df['Voix.DAN'])])\n",
     "\n",
     "\n",
     "label = [df['Nom.1'][0], df['Nom.2'][0], df['Nom.3'][0], df['Nom.4'][0], df['Nom.5'][0], df['Nom.6'][0], df['Nom.7'][0], df['Nom.8'][0], \n",
-    "df['Nom.9'][0], df['Nom.10'][0], df['Nom.11'][0], df['Nom.12'][0]]"
+    "df['Nom.9'][0], df['Nom.PV'][0], df['Nom.PP'][0], df['Nom.12'][0]]"
    ]
   },
   {
@@ -204,7 +204,7 @@
    "outputs": [],
    "source": [
     "voixCandidat1 = np.array([np.sum(df['Voix.1']), np.sum(df['Voix.2']), np.sum(df['Voix.3']), np.sum(df['Voix.4']), np.sum(df['Voix.5']), \n",
-    "np.sum(df['Voix.6']), np.sum(df['Voix.7']), np.sum(df['Voix.8']), np.sum(df['Voix.9']), np.sum(df['Voix.10']), np.sum(df['Voix.11']), np.sum(df['Voix.12']), np.sum(df['Blancs']), totalAbs])\n",
+    "np.sum(df['Voix.6']), np.sum(df['Voix.7']), np.sum(df['Voix.8']), np.sum(df['Voix.9']), np.sum(df['Voix.PV']), np.sum(df['Voix.11']), np.sum(df['Voix.12']), np.sum(df['Blancs']), totalAbs])\n",
     "\n",
     "label1 = [df['Nom.1'][0], df['Nom.2'][0], df['Nom.3'][0], df['Nom.4'][0], df['Nom.5'][0], df['Nom.6'][0], df['Nom.7'][0], df['Nom.8'][0], \n",
     "df['Nom.9'][0], df['Nom.10'][0], df['Nom.11'][0], df['Nom.12'][0], 'BLANCS', 'ABSTENTION']"
