--- a/Groupe 2/Groupe 2/rendu.ipynb
+++ b/Groupe 2/Groupe 2/rendu.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,33 +21,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\hedil\\anaconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3444: DtypeWarning: Columns (0,6) have mixed types.Specify dtype option on import or set low_memory=False.\n",
-      "  exec(code_obj, self.user_global_ns, self.user_ns)\n"
+     "ename": "KeyError",
+     "evalue": "\"['Code du département', 'Libellé du département', 'Libellé de la circonscription', 'Libellé de la commune', 'Exprimés'] not in index\"",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_20832/2687726831.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mdf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"resultats-par-niveau-burvot-t1-france-entiere.txt\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mheader\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msep\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m';'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mencoding\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'latin-1'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mdf0\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Code du département'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Libellé du département'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Code de la circonscription'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Libellé de la circonscription'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Code de la commune'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Libellé de la commune'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Code du b.vote'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Inscrits'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Abstentions'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'% Abs/Ins'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Votants'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'% Vot/Ins'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Blancs'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'% Blancs/Ins'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'% Blancs/Vot'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Nuls'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'% Nuls/Ins'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'% Nuls/Vot'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Exprimés'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'% Exp/Ins'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'% Exp/Vot'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mdf_AN\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'N°Panneau.AN'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Sexe.AN'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Nom.AN'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Prénom.AN'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Voix.AN'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'% Voix/Ins.AN'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'% Voix/Exp.AN'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mdf_RF\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'N°Panneau.RF'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Sexe.RF'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Nom.RF'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Prénom.RF'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Voix.RF'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'% Voix/Ins.RF'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'% Voix/Exp.RF'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mdf_ME\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'N°Panneau.ME'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Sexe.ME'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Nom.ME'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Prénom.ME'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Voix.ME'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'% Voix/Ins.ME'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'% Voix/Exp.ME'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\Users\\hedil\\anaconda3\\lib\\site-packages\\pandas\\core\\frame.py\u001b[0m in \u001b[0;36m__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3462\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mis_iterator\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3463\u001b[0m                 \u001b[0mkey\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 3464\u001b[1;33m             \u001b[0mindexer\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_get_listlike_indexer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   3465\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3466\u001b[0m         \u001b[1;31m# take() does not accept boolean indexers\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\Users\\hedil\\anaconda3\\lib\\site-packages\\pandas\\core\\indexing.py\u001b[0m in \u001b[0;36m_get_listlike_indexer\u001b[1;34m(self, key, axis)\u001b[0m\n\u001b[0;32m   1312\u001b[0m             \u001b[0mkeyarr\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mindexer\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnew_indexer\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0max\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_reindex_non_unique\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkeyarr\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1313\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1314\u001b[1;33m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_validate_read_indexer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkeyarr\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mindexer\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1315\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1316\u001b[0m         if needs_i8_conversion(ax.dtype) or isinstance(\n",
+      "\u001b[1;32mc:\\Users\\hedil\\anaconda3\\lib\\site-packages\\pandas\\core\\indexing.py\u001b[0m in \u001b[0;36m_validate_read_indexer\u001b[1;34m(self, key, indexer, axis)\u001b[0m\n\u001b[0;32m   1375\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1376\u001b[0m             \u001b[0mnot_found\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mensure_index\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mmissing_mask\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnonzero\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0munique\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1377\u001b[1;33m             \u001b[1;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf\"{not_found} not in index\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1378\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1379\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: \"['Code du département', 'Libellé du département', 'Libellé de la circonscription', 'Libellé de la commune', 'Exprimés'] not in index\""
      ]
     }
    ],
    "source": [
     "df = pd.read_csv(\"resultats-par-niveau-burvot-t1-france-entiere.txt\", header = 0, sep=';', encoding = 'latin-1')\n",
     "df0 = df[['Code du département', 'Libellé du département', 'Code de la circonscription', 'Libellé de la circonscription', 'Code de la commune', 'Libellé de la commune', 'Code du b.vote', 'Inscrits', 'Abstentions', '% Abs/Ins', 'Votants', '% Vot/Ins', 'Blancs', '% Blancs/Ins', '% Blancs/Vot', 'Nuls', '% Nuls/Ins', '% Nuls/Vot', 'Exprimés', '% Exp/Ins', '% Exp/Vot']]\n",
-    "df_AN = df[['N°Panneau.1', 'Sexe.1', 'Nom.1', 'Prénom.1', 'Voix.1', '% Voix/Ins.1', '% Voix/Exp.1']]\n",
-    "df_RF = df[['N°Panneau.2', 'Sexe.2', 'Nom.2', 'Prénom.2', 'Voix.2', '% Voix/Ins.2', '% Voix/Exp.2']]\n",
-    "df_ME = df[['N°Panneau.3', 'Sexe.3', 'Nom.3', 'Prénom.3', 'Voix.3', '% Voix/Ins.3', '% Voix/Exp.3']]\n",
-    "df_LJ = df[['N°Panneau.4', 'Sexe.4', 'Nom.4', 'Prénom.4', 'Voix.4', '% Voix/Ins.4', '% Voix/Exp.4']]\n",
-    "df_LPM = df[['N°Panneau.5', 'Sexe.5', 'Nom.5', 'Prénom.5', 'Voix.5', '% Voix/Ins.5', '% Voix/Exp.5']]\n",
-    "df_ZE = df[['N°Panneau.6', 'Sexe.6', 'Nom.6', 'Prénom.6', 'Voix.6', '% Voix/Ins.6', '% Voix/Exp.6']]\n",
-    "df_MJL = df[['N°Panneau.7', 'Sexe.7', 'Nom.7', 'Prénom.7', 'Voix.7', '% Voix/Ins.7', '% Voix/Exp.7']]\n",
-    "df_HA = df[['N°Panneau.8', 'Sexe.8', 'Nom.8', 'Prénom.8', 'Voix.8', '% Voix/Ins.8', '% Voix/Exp.8']]\n",
-    "df_JY = df[['N°Panneau.9', 'Sexe.9', 'Nom.9', 'Prénom.9', 'Voix.9', '% Voix/Ins.9', '% Voix/Exp.9']]\n",
-    "df_PV = df[['N°Panneau.10', 'Sexe.10', 'Nom.10', 'Prénom.10', 'Voix.10', '% Voix/Ins.10', '% Voix/Exp.10']]\n",
-    "df_PP = df[['N°Panneau.11', 'Sexe.11', 'Nom.11', 'Prénom.11', 'Voix.11', '% Voix/Ins.11', '% Voix/Exp.11']]\n",
-    "df_DAN = df[['N°Panneau.12', 'Sexe.12', 'Nom.12', 'Prénom.12', 'Voix.12', '% Voix/Ins.12', '% Voix/Exp.12']]"
+    "df_AN = df[['N°Panneau.AN', 'Sexe.AN', 'Nom.AN', 'Prénom.AN', 'Voix.AN', '% Voix/Ins.AN', '% Voix/Exp.AN']]\n",
+    "df_RF = df[['N°Panneau.RF', 'Sexe.RF', 'Nom.RF', 'Prénom.RF', 'Voix.RF', '% Voix/Ins.RF', '% Voix/Exp.RF']]\n",
+    "df_ME = df[['N°Panneau.ME', 'Sexe.ME', 'Nom.ME', 'Prénom.ME', 'Voix.ME', '% Voix/Ins.ME', '% Voix/Exp.ME']]\n",
+    "df_LJ = df[['N°Panneau.LJ', 'Sexe.LJ', 'Nom.LJ', 'Prénom.LJ', 'Voix.LJ', '% Voix/Ins.LJ', '% Voix/Exp.LJ']]\n",
+    "df_LPM = df[['N°Panneau.LPM', 'Sexe.LPM', 'Nom.LPM', 'Prénom.LPM', 'Voix.LPM', '% Voix/Ins.LPM', '% Voix/Exp.LPM']]\n",
+    "df_ZE = df[['N°Panneau.ZE', 'Sexe.ZE', 'Nom.ZE', 'Prénom.ZE', 'Voix.ZE', '% Voix/Ins.ZE', '% Voix/Exp.ZE']]\n",
+    "df_MJL = df[['N°Panneau.MJL', 'Sexe.MJL', 'Nom.MJL', 'Prénom.MJL', 'Voix.MJL', '% Voix/Ins.MJL', '% Voix/Exp.MJL']]\n",
+    "df_HA = df[['N°Panneau.HA', 'Sexe.HA', 'Nom.HA', 'Prénom.HA', 'Voix.HA', '% Voix/Ins.HA', '% Voix/Exp.HA']]\n",
+    "df_JY = df[['N°Panneau.JY', 'Sexe.JY', 'Nom.JY', 'Prénom.JY', 'Voix.JY', '% Voix/Ins.JY', '% Voix/Exp.JY']]\n",
+    "df_PV = df[['N°Panneau.PV', 'Sexe.PV', 'Nom.PV', 'Prénom.PV', 'Voix.PV', '% Voix/Ins.PV', '% Voix/Exp.PV']]\n",
+    "df_PP = df[['N°Panneau.PP', 'Sexe.PP', 'Nom.PP', 'Prénom.PP', 'Voix.PP', '% Voix/Ins.PP', '% Voix/Exp.PP']]\n",
+    "df_DAN = df[['N°Panneau.DAN', 'Sexe.DAN', 'Nom.DAN', 'Prénom.DAN', 'Voix.DAN', '% Voix/Ins.DAN', '% Voix/Exp.DAN']]"
    ]
   },
   {
@@ -148,7 +154,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Une abstention de 26.3%, ce qui est assez remarquable.\n",
+    "Une abstention de 26.31%, ce qui est assez remarquable.\n",
     "Plus que n'importe quel candidat.\n",
     "Traçons les diagrammes camemberts des résultats sans puis avec abstentions et votes blancs:"
    ]
@@ -166,18 +172,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_ZE_dep = pd.pivot_table(data = df, index = 'Libellé du département', values = 'Voix.6', aggfunc = 'sum')\n",
-    "df_DAN_dep = pd.pivot_table(data = df, index = 'Libellé du département', values = 'Voix.12', aggfunc = 'sum')\n",
+    "df_ZE_dep = pd.pivot_table(data = df, index = 'Libellé du département', values = 'Voix.ZE', aggfunc = 'sum')\n",
+    "df_DAN_dep = pd.pivot_table(data = df, index = 'Libellé du département', values = 'Voix.DAN', aggfunc = 'sum')\n",
     "df_AN_dep = pd.pivot_table(data = df, index = 'Libellé du département', values = 'Voix.1', aggfunc = 'sum')\n",
-    "df_HA_dep = pd.pivot_table(data = df, index = 'Libellé du département', values = 'Voix.8', aggfunc = 'sum')\n",
-    "df_JY_dep = pd.pivot_table(data = df, index = 'Libellé du département', values = 'Voix.9', aggfunc = 'sum')\n",
-    "df_LJ_dep = pd.pivot_table(data = df, index = 'Libellé du département', values = 'Voix.4', aggfunc = 'sum')\n",
-    "df_LPM_dep = pd.pivot_table(data = df, index = 'Libellé du département', values = 'Voix.5', aggfunc = 'sum')\n",
-    "df_ME_dep = pd.pivot_table(data = df, index = 'Libellé du département', values = 'Voix.3', aggfunc = 'sum')\n",
-    "df_MJL_dep = pd.pivot_table(data = df, index = 'Libellé du département', values = 'Voix.7', aggfunc = 'sum')\n",
-    "df_PV_dep = pd.pivot_table(data = df, index = 'Libellé du département', values = 'Voix.10', aggfunc = 'sum')\n",
-    "df_PP_dep = pd.pivot_table(data = df, index = 'Libellé du département', values = 'Voix.11', aggfunc = 'sum')\n",
-    "df_RF_dep = pd.pivot_table(data = df, index = 'Libellé du département', values = 'Voix.2', aggfunc = 'sum')\n",
+    "df_HA_dep = pd.pivot_table(data = df, index = 'Libellé du département', values = 'Voix.HA', aggfunc = 'sum')\n",
+    "df_JY_dep = pd.pivot_table(data = df, index = 'Libellé du département', values = 'Voix.JY', aggfunc = 'sum')\n",
+    "df_LJ_dep = pd.pivot_table(data = df, index = 'Libellé du département', values = 'Voix.LJ', aggfunc = 'sum')\n",
+    "df_LPM_dep = pd.pivot_table(data = df, index = 'Libellé du département', values = 'Voix.LPM', aggfunc = 'sum')\n",
+    "df_ME_dep = pd.pivot_table(data = df, index = 'Libellé du département', values = 'Voix.ME', aggfunc = 'sum')\n",
+    "df_MJL_dep = pd.pivot_table(data = df, index = 'Libellé du département', values = 'Voix.MJL', aggfunc = 'sum')\n",
+    "df_PV_dep = pd.pivot_table(data = df, index = 'Libellé du département', values = 'Voix.PV', aggfunc = 'sum')\n",
+    "df_PP_dep = pd.pivot_table(data = df, index = 'Libellé du département', values = 'Voix.PP', aggfunc = 'sum')\n",
+    "df_RF_dep = pd.pivot_table(data = df, index = 'Libellé du département', values = 'Voix.RF', aggfunc = 'sum')\n",
     "df_BLANC_dep = pd.pivot_table(data = df, index = 'Libellé du département', values = 'Blancs', aggfunc = 'sum')\n",
     "df_ABS_dep = pd.pivot_table(data = df, index = 'Libellé du département', values = 'Abstentions', aggfunc = 'sum')\n",
     "df_NUL_dep = pd.pivot_table(data = df, index = 'Libellé du département', values = 'Nuls', aggfunc = 'sum')"
@@ -197,18 +203,18 @@
    "outputs": [],
    "source": [
     "def camembertDepObs(depObs):\n",
-    "    voixCandidatDepObs = np.array([np.sum(df_AN_dep['Voix.1'][depObs]), np.sum(df_RF_dep['Voix.2'][depObs]), \n",
-    "    np.sum(df_ME_dep['Voix.3'][depObs]), np.sum(df_LJ_dep['Voix.4'][depObs]), \n",
-    "    np.sum(df_LPM_dep['Voix.5'][depObs]), np.sum(df_ZE_dep['Voix.6'][depObs]), \n",
-    "    np.sum(df_MJL_dep['Voix.7'][depObs]), np.sum(df_HA_dep['Voix.8'][depObs]), \n",
-    "    np.sum(df_JY_dep['Voix.9'][depObs]), np.sum(df_PV_dep['Voix.10'][depObs]), \n",
-    "    np.sum(df_PP_dep['Voix.11'][depObs]), np.sum(df_DAN_dep['Voix.12'][depObs]),\n",
+    "    voixCandidatDepObs = np.array([np.sum(df_AN_dep['Voix.1'][depObs]), np.sum(df_RF_dep['Voix.RF'][depObs]), \n",
+    "    np.sum(df_ME_dep['Voix.ME'][depObs]), np.sum(df_LJ_dep['Voix.LJ'][depObs]), \n",
+    "    np.sum(df_LPM_dep['Voix.LPM'][depObs]), np.sum(df_ZE_dep['Voix.ZE'][depObs]), \n",
+    "    np.sum(df_MJL_dep['Voix.MJL'][depObs]), np.sum(df_HA_dep['Voix.HA'][depObs]), \n",
+    "    np.sum(df_JY_dep['Voix.JY'][depObs]), np.sum(df_PV_dep['Voix.PV'][depObs]), \n",
+    "    np.sum(df_PP_dep['Voix.PP'][depObs]), np.sum(df_DAN_dep['Voix.DAN'][depObs]),\n",
     "    np.sum(df_BLANC_dep['Blancs'][depObs]), np.sum(df_ABS_dep['Abstentions'][depObs]), np.sum(df_NUL_dep['Nuls'][depObs])])\n",
     "\n",
-    "    labelDepObs = [df['Nom.1'][0], df['Nom.2'][0], df['Nom.3'][0], df['Nom.4'][0], df['Nom.5'][0], df['Nom.6'][0], df['Nom.7'][0], df['Nom.8'][0], \n",
-    "    df['Nom.9'][0], df['Nom.10'][0], df['Nom.11'][0], df['Nom.12'][0], 'BLANCS', 'ABSTENTIONS', 'NULS']\n",
+    "    labelDepObs = [df['Nom.1'][0], df['Nom.RF'][0], df['Nom.ME'][0], df['Nom.LJ'][0], df['Nom.LPM'][0], df['Nom.ZE'][0], df['Nom.MJL'][0], df['Nom.HA'][0], \n",
+    "    df['Nom.JY'][0], df['Nom.PV'][0], df['Nom.PP'][0], df['Nom.DAN'][0], 'BLANCS', 'ABSTENTIONS', 'NULS']\n",
     "\n",
-    "    camembertDepObs = plt.pie(voixCandidatDepObs, labels=labelDepObs, normalize = True, autopct = lambda voixCandidatDepObs: str(round(voixCandidatDepObs, 2)) + '%', pctdistance=0.9)\n",
+    "    camembertDepObs = plt.pie(voixCandidatDepObs, labels=labelDepObs, normalize = True, autopct = lambda voixCandidatDepObs: str(round(voixCandidatDepObs, 2)) + '%', pctdistance=0.JY)\n",
     "    plt.rcParams[\"figure.figsize\"] = [13, 13]\n",
     "    plt.show()"
    ]
